@@ -1,8 +1,14 @@
-2022-07-07  Charlie Zender  <zender@uci.edu>
+2022-07-08  Charlie Zender  <zender@uci.edu>
 
 	* NCO 5.1.0 release procedure:
 	cd ~/nco;git commit -a -m 'Version 5.1.0: Rattlesnake';git push
 	git tag -a 5.1.0 -m 'all: filters, cmp_sng, CCR, nc 4.9.0; ncremap fix sub-sgs nrm, add ssgs thr';git push --tags
+
+	* Clarify ncremap -m map-file usage in code and -G grd_sng usage in manual
+
+2022-07-07  Charlie Zender  <zender@uci.edu>
+
+	* Add Blosc examples to documentation
 
 	* Pass unknown IDs through to invocation execution
 
